package org.javaturk.jp.ch05.hospital;

import java.util.Date;

public class Prescription {
    long id;
    Doctor doctor;
    Patient patient;
    Date date;
    String[] medications;

    // ...

}
