package org.javaturk.jp.ch05.hospital;

import java.util.Date;

public class Receipt {
    long id;
    Date date;
    Patient patient;
}
